; ModuleID = '/home/carl/AnghaBench/openssl/crypto/engine/extr_tb_asnmth.c_ENGINE_register_all_pkey_asn1_meths.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/engine/extr_tb_asnmth.c_ENGINE_register_all_pkey_asn1_meths.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ENGINE_register_all_pkey_asn1_meths() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* (...) @ENGINE_get_first()
  store i32* %2, i32** %1, align 8
  br label %3

3:                                                ; preds = %9, %0
  %4 = load i32*, i32** %1, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %12

6:                                                ; preds = %3
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @ENGINE_register_pkey_asn1_meths(i32* %7)
  br label %9

9:                                                ; preds = %6
  %10 = load i32*, i32** %1, align 8
  %11 = call i32* @ENGINE_get_next(i32* %10)
  store i32* %11, i32** %1, align 8
  br label %3

12:                                               ; preds = %3
  ret void
}

declare dso_local i32* @ENGINE_get_first(...) #1

declare dso_local i32 @ENGINE_register_pkey_asn1_meths(i32*) #1

declare dso_local i32* @ENGINE_get_next(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
